crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-functiondecl-hoisting/error.txt
Found 1 error:

Todo: [PruneHoistedContexts] Rewrite hoisted function references

error.todo-functiondecl-hoisting.ts:12:17
  10 |  */
  11 | function Foo({value}) {
> 12 |   const result = bar();
     |                  ^^^ [PruneHoistedContexts] Rewrite hoisted function references
  13 |   function bar() {
  14 |     return {value};
  15 |   }
